<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layouStepDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/stepCardContainer"
        android:layout_width="match_parent"
        android:layout_height="260dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/stepTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/step_string" />


            <EditText
                android:id="@+id/StepEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/stepTextView"
                android:layout_marginVertical="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_shape"
                android:gravity="top"
                android:hint="@string/step_hint_string"
                android:inputType="textMultiLine"
                android:maxHeight="48dp"
                android:minHeight="48dp"
                android:paddingLeft="4dp"
                android:paddingTop="6dp"
                android:scrollbars="vertical" />


            <Button
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:minHeight="48dp"
                android:text="@string/add_button" />


            <Button
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_toLeftOf="@id/yesButton"
                android:text="@string/delete_button" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>