<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/cookery_blue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button_login_2"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/ic_back_button"
            android:foreground="?android:attr/selectableItemBackground"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/your_profile"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_height="130dp"
        android:textColor="@color/black"
        android:background="@drawable/xml_custom_shapes"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_semi_bold"
        android:textAlignment="center"
        android:text="@string/Update_email_pass"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_shape_v2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" >

        <TextView
            android:id="@+id/textViewMail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/email" />

        <EditText
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewMail"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />


        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileEmail"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/password" />

        <EditText
            android:id="@+id/profilePassword"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewPassword"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:hint="@string/password_hint"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/saveButton_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePassword"
            android:layout_marginStart="250dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/cookery_blue"
            android:elevation="8dp"
            android:enabled="true"
            android:clickable="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/save"
            android:textColor="@color/white" />


    </RelativeLayout>
</LinearLayout>