<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_ingredient_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialogIngredientCard"
        android:layout_width="match_parent"
        android:layout_height="165dp">

        <RelativeLayout
            android:id="@+id/layoutIngredientAddIngredient"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/IngredientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp" />


            <Button
                android:id="@+id/addIngredientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:minHeight="48dp"
                android:text="@string/add_button" />


            <Button
                android:id="@+id/deleteIngredientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_toLeftOf="@id/addIngredientButton"
                android:text="@string/delete_button" />

            <EditText
                android:id="@+id/IngredientEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/IngredientName"
                android:layout_marginVertical="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_shape"
                android:hint="@string/ingredient_hint_string"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingLeft="4dp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>